# terraform-viz

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml  tfviz.py
.github/workflows/: publish.yml  test.yml
examples/: README.md  sample_graph.dot
src/terraform_viz/: __init__.py  __main__.py  ascii_renderer.py  cli.py  config.py  executables.py  file_manager.py  graph_generator.py  orchestrator.py  renderer.py  terminal_renderer.py
src/tfviz/: __init__.py  __main__.py  cli.py  config.py  orchestrator.py
