[project]
name = "tfviz"
version = "0.1.0"
description = "A simple, fast CLI tool for generating PNG visualizations of your Terraform infrastructure."
readme = "README.md"
requires-python = "==3.13.3"
license = { text = "MIT" }
authors = [
    { name = "Pedro P. Camellon", email = "pedropcamellon@gmail.com" }
]
keywords = ["terraform", "visualization", "infrastructure", "devops", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "rich==13.7.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/tfviz"
Repository = "https://github.com/yourusername/tfviz"
Issues = "https://github.com/yourusername/tfviz/issues"

[project.scripts]
tfviz = "tfviz.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"