[project]
name = "terraform-viz"
version = "0.1.1"
description = "A simple, fast CLI tool for generating PNG visualizations of your Terraform infrastructure."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Pedro P. Camellon", email = "pedropcamellon@gmail.com" }
]
keywords = ["terraform", "visualization", "infrastructure", "devops", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "rich>=13.7.0",
]

[project.urls]
Homepage = "https://github.com/pedropcamellon/terraform-viz"
Repository = "https://github.com/pedropcamellon/terraform-viz"
Issues = "https://github.com/pedropcamellon/terraform-viz/issues"

[project.scripts]
terraform-viz = "terraform_viz.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"